--- a/_posts/2022-05-18-INITIUM-黎巴嫩大选现场-经济崩溃和宗教政治背后-仍在寻觅希望的年轻人.html
+++ b/_posts/2022-05-18-INITIUM-黎巴嫩大选现场-经济崩溃和宗教政治背后-仍在寻觅希望的年轻人.html
@@ -10,40 +10,17 @@ author: 谢若含
 
 <p>「“这个国家很伟大不是吗？这里的人民不该这样被辜负。”」</p><p>特约撰稿人谢若含 发自贝鲁特</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220519-international-young-people-in-lebanon-2022-elections/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/05/04d45b37d68a4f3e8447497b87afd2ad.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年5月15日，黎巴嫩首都贝鲁特，前总理哈里里（Saad Hariri）的支持者在住宅区内建起吹起水池，呼吁民众杯葛议会选举。水池上悬挂着哈里里的肖像。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
             <figcaption itemprop="caption">2022年5月15日，黎巴嫩首都贝鲁特，前总理哈里里（Saad Hariri）的支持者在住宅区内建起吹起水池，呼吁民众杯葛议会选举。水池上悬挂着哈里里的肖像。<span class="credit">摄：Hassan Ammar/AP/达志影像</span></figcaption></figure><p><small>【编者按】5月15日，黎巴嫩举行了全国大选。这是该国自中央银行和国家一同宣布破产，黎磅贬值超过90%以及贝鲁特港大爆炸等一连串危机发生后的首度议会选举。这些危机都指向同一个原因：传统宗派政党的腐败与失能。2019年，数十万黎巴嫩人走上街头，反对宗派政治，呼吁建立公民国家，也由此催生了不少新兴政党和致力于推翻传统政治格局的独立候选人。</small></p>
-<p>今次大选结果表明，传统大党真主党和其盟友失去了过去几十年来在黎巴嫩议会中占主导地位的多数席位，同时，有16名反对党的独立候选人闯入议会，与2018年的选举相比，增加了15个席位。尽管重大改变在短期内仍难以发生，但这一结果仍撼动了传统大党的地位。</p>
-<p>继续打破传统秩序，将成为一代人的革命。本文记者在大选前一周走进这个国家，纪录了她遇到的、黎巴嫩的年轻一代，以及他们的挣扎与失落，希望和斗争。</p>
+<p><small>今次大选结果表明，传统大党真主党和其盟友失去了过去几十年来在黎巴嫩议会中占主导地位的多数席位，同时，有16名反对党的独立候选人闯入议会，与2018年的选举相比，增加了15个席位。尽管重大改变在短期内仍难以发生，但这一结果仍撼动了传统大党的地位。</small></p>
+<p><small>继续打破传统秩序，将成为一代人的革命。本文记者在大选前一周走进这个国家，纪录了她遇到的、黎巴嫩的年轻一代，以及他们的挣扎与失落，希望和斗争。</small></p>
 <p>5月7日，我在深夜凌晨两点到达黎巴嫩首度贝鲁特拉菲克·哈里里国际机场。走出机场，戴黑框眼镜、穿一身T恤短裤的黎巴嫩人纳伊姆（Naim Abou Darwsh）已经站在一辆老旧的红色吉普前等了有一会。看到我后，他用中文“你好”热情地打了声招呼，又连声说了三次Welcome后，一脚踩上了油门；经朋友介绍，好心的纳伊姆来接我去市区。车刚开出去没多久，他突然侧过头来对我说：“你在一个很有趣的时间点到了黎巴嫩，这周日是我们国家的大选。”</p>
 <p>我顺着问他准备投给哪个党，这个问题打开了纳伊姆的话匣，他滔滔不绝地开始讲起黎巴嫩积重难返的宗派政治体系、令人绝望的经济崩溃和他为支持政党所做的志愿工作。自2021年以来，黎巴嫩本地失业率已经高达55%，人们通过从事不同零工维持生计，纳伊姆如今也失业在家，和母亲同住在一起。</p>
- 
- 
- 
- 
- 
- 
-
- 
- 
- 
- 
- 
- 
- 
- 
+<p>车快速经过一座漆黑的涵洞驶入市区，夜晚的贝鲁特光亮很少——写字楼外墙没有在城市里惯常见到的灯光带，甚至都没有路灯或是交通信号灯，仅有的一些微光来自居民楼。汽车经过街道拐角处的垃圾站，食物腐烂的酸臭味伴着夏日夜晚的风弥散开来。我们经过了黎巴嫩一所大学，顺着手指过去的方向，纳伊姆提醒我，大学附近不远处的居民楼就是如今他志愿服务的政党“国家公民党”（Citizens in a State）在贝鲁特的办公室。</p>
+<p>在贝鲁特待了一周后，我意识到那个深夜的谈话并非特例。在我得以开始深入感受这座城市的运转失灵的同时，每个遇到的黎巴嫩人——常常是年轻人——也不约而同与我聊起这场即将开始的大选，和他们心中的斗争。</p>
  
  
  
  
 
- 
- 
- 
- 
- 
- 
- 
- 
-
- 
  
  
  
@@ -65,9 +42,32 @@ author: 谢若含
  
  
  
+
  
  
-<p>车快速经过一座漆黑的涵洞驶入市区，夜晚的贝鲁特光亮很少——写字楼外墙没有在城市里惯常见到的灯光带，甚至都没有路灯或是交通信号灯，仅有的一些微光来自居民楼。汽车经过街道拐角处的垃圾站，食物腐烂的酸臭味伴着夏日夜晚的风弥散开来。我们经过了黎巴嫩一所大学，顺着手指过去的方向，纳伊姆提醒我，大学附近不远处的居民楼就是如今他志愿服务的政党“国家公民党”（Citizens in a State）在贝鲁特的办公室。</p><p>在贝鲁特待了一周后，我意识到那个深夜的谈话并非特例。在我得以开始深入感受这座城市的运转失灵的同时，每个遇到的黎巴嫩人——常常是年轻人——也不约而同与我聊起这场即将开始的大选，和他们心中的斗争。</p><p>离开的和留下的</p><p>过去几年，这个国家在经受一场由金融风暴造成的人道主义灾难。世界银行称这是几个世纪以来最严重的金融危机之一，全国四分之三的人陷入了贫困。黎巴嫩磅贬值超过90%，这不仅意味着大部分人放在银行的存款几乎蒸发，同时也导致了进口能源的短缺，许多家庭每天都要经历好几次断电。</p><p>2020年贝鲁特港大爆炸，在一瞬间摧毁了半径十公里内几乎所有建筑。处在爆炸中心的黎巴嫩国家储备粮食库残存的筒仓时隔两年依然伫立在港口，军队士兵如今持枪值守在距离筒仓1.5公里远处，不许行人靠近。远望过去，视线里的建筑残骸像是海边一块巨大而丑陋的伤疤，像是意味着这个国家的伤口一直存在，未能弥合。曾经人头攒动的市中心商业街，如今的一个街区被军队把守起来，伫立在大道两边的奢侈品店关了大半，尚在营业的也已无人问津。</p><p><a class="image" href="https://theinitium.com/article/20220519-international-young-people-in-lebanon-2022-elections/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/05/705b469282ee44638825e90dde546bb6.JPG?imageView2/1/w/1080/h/720/format/jpg" alt="2022年5月13日，黎巴嫩首都贝鲁特，一个被两年前港口仓库大爆炸破坏的油站后面，悬挂著一幅议会选举候选人的直幅。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+<p>离开的和留下的</p><p>过去几年，这个国家在经受一场由金融风暴造成的人道主义灾难。世界银行称这是几个世纪以来最严重的金融危机之一，全国四分之三的人陷入了贫困。黎巴嫩磅贬值超过90%，这不仅意味着大部分人放在银行的存款几乎蒸发，同时也导致了进口能源的短缺，许多家庭每天都要经历好几次断电。</p><p>2020年贝鲁特港大爆炸，在一瞬间摧毁了半径十公里内几乎所有建筑。处在爆炸中心的黎巴嫩国家储备粮食库残存的筒仓时隔两年依然伫立在港口，军队士兵如今持枪值守在距离筒仓1.5公里远处，不许行人靠近。远望过去，视线里的建筑残骸像是海边一块巨大而丑陋的伤疤，像是意味着这个国家的伤口一直存在，未能弥合。曾经人头攒动的市中心商业街，如今的一个街区被军队把守起来，伫立在大道两边的奢侈品店关了大半，尚在营业的也已无人问津。</p><p><a class="image" href="https://theinitium.com/article/20220519-international-young-people-in-lebanon-2022-elections/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/05/705b469282ee44638825e90dde546bb6.JPG?imageView2/1/w/1080/h/720/format/jpg" alt="2022年5月13日，黎巴嫩首都贝鲁特，一个被两年前港口仓库大爆炸破坏的油站后面，悬挂著一幅议会选举候选人的直幅。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 </p><figcaption itemprop="caption">2022年5月13日，黎巴嫩首都贝鲁特，一个被两年前港口仓库大爆炸破坏的油站后面，悬挂著一幅议会选举候选人的直幅。<span class="credit">摄：Mohamed Azakir/Reuters/达志影像</span></figcaption><p></p><p>共享打车平台“bolt”的司机维萨姆（Wissam）一路在和我抱怨油价在过去一个月里再次上涨了15000黎磅（约合0.5美元），平台预估的车费几乎已经不够支付消耗的燃料。他其实是一名程序员，工资从过去每月1000美元缩水到110美元之后，他只能靠打两份工来维持生计。每天，他都在思索如何离开这个国家，但去海外工作并不简单，中东其他国家看他来自黎巴嫩，开出的薪水马上比本地人少掉了三分之一。</p><p>到达黎巴嫩的第二天下午，我和在贝鲁特美国大学念书的凯伦（Karen Kordab）约在海边见面，她留一头卷曲的中短发，穿露腰的紫色NIKE运动服和紧身裤，很有朝气。在毗邻地中海海滩的巴黎大道上我们一路往东北方向前行，凯伦从最近关注的虚拟货币市场聊到业余时间间断运营的两家公益组织，其中一家帮助倡导残障人士权益，另一家则致力于带领人们到黎巴嫩体验山间生活。上周，她刚从柏林学习回来，在即将到来的暑假，她还要飞去美国参加暑期项目。</p><p>我惊讶于她旺盛的精力，她却说：“你知道，在这个国家没有什么事情是轻而易举的。” 毕业后，她也想先离开这个国家，到国外寻找工作机会。</p><p>在经历了1975-1990年的血腥内战之后，移民和人才流失一直是黎巴嫩生活的一部分。但在大爆炸和经济危机发生后，这一数据再度增加，2021年一项调研显示<a href="https://news.gallup.com/poll/357743/leaving-lebanon-crisis-people-looking-exit.aspx">63%</a>的黎巴嫩人表示如果可以，他们将永久离开这个国家。如今，黎巴嫩定居海外的人口已经<a href="https://en.wikipedia.org/wiki/Lebanese_diaspora">超越</a>本国人口总数。</p><p>在沿海大道上，遥望着远方连绵的山脉，凯伦侧过头问我：“你喜欢这儿吗？” 还没等我回答，她又自言自语地讲到：“这个国家很伟大不是吗？这里的人民不该这样被辜负。”</p><p>一路上，我们经过了不少政党宣传标牌。这次大选是自2019年经济崩溃和2020年那场震惊世界的贝鲁特港口大爆炸发生后，黎巴嫩人首次进行的议会选举投票。</p><p>聊到即将举行的大选，凯伦说自己没有任何宗教信仰，但每个黎巴嫩人在出生之时会根据出生地被决定所属“宗教”，即使你从未成为它的信徒。</p><p>这与黎巴嫩特殊的教派政治体制有关，全国一共有18个合法教派。因此，选举制度也必须以教派<a href="https://www.trtworld.com/magazine/lebanon-s-elections-a-short-guide-56870">为基础</a>，由黎巴嫩的宗教团体按比例代表制进行投票，再选择出国会128个席位的党派代表人。在黎巴嫩，总统必须始终是马龙派基督徒，总理是逊尼派，议会发言人是什叶派。而这些宗教背后又由长期盘踞在黎巴嫩政坛的传统政党把持，比如背靠伊朗支持的什叶派伊斯兰政治和军事组织真主党，在1982年将入侵的以色列出逐出黎巴嫩南部后，逐渐成为如今最大也是唯一具有军事力量的政党组织。</p><p>但是，对像凯伦这一代的进步青年来说，长期掌握议会的传统党派令人厌倦，也是这个国家难以通过投票箱实现变革的原因之一。1975年，黎巴嫩的宗派领导人将人民拖入了一场毁灭性的内战，导致12万人丧生。1990年战争结束后不久，他们又继续通过将宗派利益置于国家利益之上来分裂黎巴嫩，并通过掠夺其财富浪费了这个国家繁荣的潜力。</p><p>刚满21岁的凯伦和她的很多朋友一样，决定把她们的第一次选票投给反对党派阵营，他们中大多数在2019年的革命后开始在政坛展露头角。2019年10月，数十万黎巴嫩人走上街头，对政府常年腐败和公共服务缺失表示愤怒，要求政治变革，由此爆发了黎巴嫩著名的10月17日革命。这次抗议活动让大量年轻和独立的竞争者注册了本次选举。内政部登记了103份名单，包括718名候选人，比2018年的选举多出了20%。</p><p>其中，纳伊姆支持的政党“国家公民党”，就是参与2019年革命的反对党之一。和许多其他新涌现的反对党派的倾向相似，它们的目标是创建一个“公民国家”，反对宗派政治。在这个国家里，黎巴嫩人民作为公民被代表，而不是作为宗派利益的客户。</p><p><a class="image" href="https://theinitium.com/article/20220519-international-young-people-in-lebanon-2022-elections/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/05/a61afc5407b94e6ca6ba80f94b0406d1.JPG?imageView2/1/w/1080/h/761/format/jpg" alt="2022年5月10日，“Citizens in a State”政党成员在办公室内预备竞选横幅。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 </p><figcaption itemprop="caption">2022年5月10日，“Citizens in a State”政党成员在办公室内预备竞选横幅。<span class="credit">摄：Mohamed Azakir/Reuters/达志影像</span></figcaption><p></p><p>暗流涌动的大选前夕</p><p>大选前一周，政府就宣布，投票的那个周末全城夜店场所必须关闭。大选日前一天，黎巴嫩军队将坦克和装甲车驶入了贝鲁特市区。军队在社交媒体<a href="https://today.lorientlejour.com/article/1299479/election-security-measures-go-into-effect-across-lebanon.html">表示</a>，部署兵力是为了整个竞选过程的公平和安全。在黎巴嫩的朋友陆续提醒我最好减少出门，就在半年前，我所住公寓800米远的街区就发生了一场激烈的街头枪战，冲突来自政党利益纷争。</p><p>虽被警告，我仍然决定在大选前一日和纳伊姆到“国家公民党”的竞选办公室看看，他提出骑摩托车载我一程。摩托车七弯八拐地快速行驶在车流中一丁点狭窄的空间中，时不时纳伊姆会指着挂在头顶的宣传横幅告诉我，这条街是什叶党派或马龙派的势力范围，其他政党如果试图在这个街区游说选民，可能遭遇血光之灾。事后，我在推特上看到人们发放党派宣传单被其他政党暴打在地的视频——纳伊姆看到后耸耸肩表示，早已在预料之中。</p><p>越临近选举日，越多黎巴嫩人开始对结果不抱希望。摧毁人们信心的一个事实来自于传统政党中广泛存在的贿选。纳伊姆的父亲准备把票投给传统党派真主党，因为对方承诺会帮助他修缮老家的田地。这样的事情发生在每个角度，有时传统政党只需给贫困家庭发放一点粮食和燃油券，就能轻而易举拿到选票。</p><p>“我们党就像那个暗流涌动的海面上，站在一艘巨型邮轮前拿剑的小孩。”纳伊姆指着给六岁女儿常读漫画书里的一页，给我形容如今反对党的局面，即使如此，“为了女儿的未来我也想继续斗争。”</p><p>中午，我们到达了“国家公民党”坐落在一栋住宅区中选举办公室，这是一间大约 200平米的套房，门口唯一的识别标志是蓝色和紫色的菱形政党标志，房间地板上堆放放着宣传手册和传单和打印机，书桌上放着五六个话筒。作为独立政党，他们的所有竞选资金来自于捐助人每月1-2%的薪水，他们无法支付昂贵的电视广告费，因此选择把大部分宣传放在推特和Youtube等网络平台上，许多谈话视频就拍摄于其中的一个房间里。</p><p>这里的氛围不如我想象中紧张，陆续赶来帮忙的志愿者和代表不同选区的候选人在房间里四处走动，有的在和人交谈、有的则盯着电脑忙碌。纳伊姆示意我坐在阳台上背对着房间和旁人聊天的那位穿深灰色西装的老人正是“国家公民党”的创始人Charbel Nahas，他是黎巴嫩前电信部和劳工部部长，也是一名经济学家，在2016年创建了该党，因其关于黎巴嫩政治经济的大量著作而闻名，其中包括他在2019年危机发生前几年对经济体系崩溃的预测，以及对国家详细复苏计划的阐述。</p><p><a class="image" href="https://theinitium.com/article/20220519-international-young-people-in-lebanon-2022-elections/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/05/fc9263d15fe2425cb9f295086ba6cf6a.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年5月15日，黎巴嫩首都贝鲁特，一名女子在议会选举中投票。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 </p><figcaption itemprop="caption">2022年5月15日，黎巴嫩首都贝鲁特，一名女子在议会选举中投票。<span class="credit">摄：Hassan Ammar/AP/达志影像</span></figcaption><p></p><p>“他经常来办公室，有时候还会给我们煮咖啡。”坐在沙发上的志愿者，今年28岁的马尔万（Marwan Menin）在采访中强调了几次和那些高高在上的政治精英相比，Charbel Nahas是多么的亲民与友好。如果不是他介绍自己是一名广告从业者，我总是不自觉把马尔万和硅谷极客的形象联系起来。</p><p>“每天我们的工作都不太一样”，前一天，马尔万的工作就是为选民提供免费的交通运送，以此提高投票率——法律规定人们需要回到户籍所在地投票，但由于油价上涨和公共交通的匮乏，不少居住在贝鲁特的公民都决定放弃投票权以节省开支。</p><p>聊起“国家公民党”反对私有化和呼吁建立全民医疗保健系统和加强免费公共教育的举措，马尔万滔滔不绝和我讲了十几分钟。他说，在做了很久的功课之后，觉得“国家公民党”是唯一提出具体改革措施的政党，“其他反对党只是不断在台前幕后表示希望变革现有政治体制”。</p><p>与此同时，马尔万也感到挣扎，因为他的工资也一直在降低。当我问到有没有想过离开时，他说：“我每一天都在想未来到底在哪里?”</p><p>“但未来的希望是斗争出来的，如果我们不斗争，还能留给谁去斗争？”</p><p>“对明天的大选有信心吗？”我把这个问题抛给了马尔万和办公室里的人们，得到几乎一样的答案：“赢得议会席位不是最重要的，重要的是我们把公民国家的理念坚持下去影响更多人。”</p><p>回家的路上，整个贝鲁特市区刮起大风，吹起了居民楼窗台前遮挡灰尘的帷幔。风沙让整座城市陷于一片浑浊，没被及时清理的垃圾满街飞扬。人们互相开着玩笑说，这好像一场暴风雨的前奏。</p><p>“改变会发生的”</p><p>大选日当天，投票从早上7点一直持续到晚上7点，小汽车一早播放着声量巨大的拉票音乐在居民区里穿行。真主党的拉票车最为显眼——火箭筒架设在汽车车顶，左右两边分别飘扬着黎巴嫩国旗和真主党旗帜。</p><p>下午一点多，出门投票的黎巴嫩人到达了小高峰，从贝鲁特南部一路往海边行驶的交通主干道上挤满了开往投票点的私家车，堵车照例随时发生在任何一个角落。贝鲁特的投票点均设在公共学校当中，Shakib Erslan高中是其中一，校园门口挤满了前来投票的民众，也有成群结对、不同政党的志愿者穿着一样的T恤衫站校门口造势，其中不少是还没达到投票年龄的年轻小孩。</p><p>气氛比预想中平和，偶尔有小范围的冲突但尚在可控范围之中，但是，门口严正以待的大批官兵和马路前来回驶过的装甲车，还是给大选日添加了不少紧张气氛。</p><p>选民在教室里做出投票选择后，最后要用墨水印上指纹，选票最终才会生效。不少年轻人用中指蘸上了墨水，在推特上发送了竖中指的照片，配文“Vote them out”（“把他们投出去”）， 以示对腐败无能的传统政党的不满。</p><p><a class="image" href="https://theinitium.com/article/20220519-international-young-people-in-lebanon-2022-elections/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/05/d001f12b421243629dcd380b0b8eb6e2.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年5月10日，黎巴嫩首都贝鲁特，真主党支持者举行选前造势大会。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
