--- a/_posts/2022-05-18-PQ-馬立波亞速軍團受命投降-俄羅斯下議院稱其-納粹戰犯.html
+++ b/_posts/2022-05-18-PQ-馬立波亞速軍團受命投降-俄羅斯下議院稱其-納粹戰犯.html
@@ -16,7 +16,7 @@ author: 王雪俐
 
 
 
-<div class="wp-block-image"><figure class="alignright size-large is-resized"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/8c2236bf-亞速軍團隊徽（圖／inkscaper／公有領域）.svg-545x1024.png" alt="" class="wp-image-101753" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/8c2236bf-亞速軍團隊徽（圖／inkscaper／公有領域）.svg-545x1024.png 545w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/8c2236bf-亞速軍團隊徽（圖／inkscaper／公有領域）.svg-160x300.png 160w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/8c2236bf-亞速軍團隊徽（圖／inkscaper／公有領域）.svg-768x1444.png 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/8c2236bf-亞速軍團隊徽（圖／inkscaper／公有領域）.svg.png 800w" sizes="(max-width: 162px) 100vw, 162px" /><figcaption>亞速軍團隊徽（圖／Inkscape&#8217;r／公有領域）.svg</figcaption></figure></div>
+<div class="wp-block-image"><figure class="alignright size-large is-resized"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/8c2236bf-亞速軍團隊徽（圖／inkscaper／公有領域）.svg-545x1024.png" alt="" class="wp-image-101753" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/8c2236bf-亞速軍團隊徽（圖／inkscaper／公有領域）.svg-545x1024.png 545w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/8c2236bf-亞速軍團隊徽（圖／inkscaper／公有領域）.svg-160x300.png 160w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/8c2236bf-亞速軍團隊徽（圖／inkscaper／公有領域）.svg-768x1444.png 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/8c2236bf-亞速軍團隊徽（圖／inkscaper／公有領域）.svg.png 800w" sizes="(max-width: 162px) 100vw, 162px" /><figcaption>亞速軍團隊徽（圖／Inkscape&#8217;r／公有領域）.svg</figcaption></figure></div>
 
 
 
