--- a/_posts/2022-05-03-VOCUS-philotimo-與-愛自-愛衷-負任責-豐功的樣模-榮耀-炫耀-驕傲-風膨-愛動運者-完不滿-愛美-愛兼非攻-等橋接.html
+++ b/_posts/2022-05-03-VOCUS-philotimo-與-愛自-愛衷-負任責-豐功的樣模-榮耀-炫耀-驕傲-風膨-愛動運者-完不滿-愛美-愛兼非攻-等橋接.html
@@ -34,6 +34,6 @@ author: 羅聖爾
 <div class="draft-block draft--p left">巧合的是，philotimo 這個單字的字尾 mo 竟然很接近漢語「墨」，timo 又音近墨家的靈魂人物「墨翟」的倒裝「翟墨」呢！</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">P.S.1. 參考〈多重含意的 fuck〉-- </span><a href="https://vocus.cc/BridgeWords/5d548ad1fd897800012b6d25" target="_blank" class="draft--a"><span style="font-weight: bold; ">https://vocus.cc/BridgeWords/5d548ad1fd897800012b6d25</span></a></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">P.S.2. 參考〈《荀子》之「惡」的內涵〉-- </span><a href="https://vocus.cc/BridgeWords/5d4f63abfd89780001062328" target="_blank" class="draft--a"><span style="font-weight: bold; ">https://vocus.cc/BridgeWords/5d4f63abfd89780001062328</span></a></div>
-<iframe src="https://youtu.be/embed/wJaycp8eX-g" width="640px" height="360px"></iframe>
-<div class="draft-block draft--p center"><a href="https://youtu.be/wJaycp8eX-g" target="_blank" class="draft--a"><span style="font-weight: bold; ">https://youtu.be/wJaycp8eX-g</span></a></div>
+<iframe src="https://youtube.com/embed/embed/wJaycp8eX-g" width="640px" height="360px"></iframe>
+<div class="draft-block draft--p center"><a href="https://youtube.com/embed/wJaycp8eX-g" target="_blank" class="draft--a"><span style="font-weight: bold; ">https://youtube.com/embed/wJaycp8eX-g</span></a></div>
 <div class="draft-block draft--p center"><span style="font-weight: bold; ">【附圖：Philotimo - A Word without Borders / 分享自 YouTube】</span></div>
