--- a/_posts/2022-05-03-VOCUS-搞錯就差很多-you-put-me-to-shame-是你很丟臉.html
+++ b/_posts/2022-05-03-VOCUS-搞錯就差很多-you-put-me-to-shame-是你很丟臉.html
@@ -15,7 +15,7 @@ author: 你的英日語自學導師　 ོꦿ༄譯꧁難忘꧂
 <div class="draft-block draft--p left">黎安·萊姆絲的歌曲《Life Goes On》中有一段詞寫道：</div>
 <div class="draft-block draft--quotesSpecial center"><div class="content">Shame on you, if you fool(愚弄) me once(一次). <br>Shame on me if you fool me twice(兩次)</div></div>
 <div class="draft-block draft--quotesSpecial center"><div class="content">騙到我一次，是你丟臉。騙到我兩次，只怪我自己丟臉</div></div>
-<iframe src="https://youtu.be/embed/XvH2SwmP5vw" width="640px" height="360px"></iframe>
+<iframe src="https://youtube.com/embed/embed/XvH2SwmP5vw" width="640px" height="360px"></iframe>
 <h2 class="draft-block draft--h2" name="header-22v36">You put me to shame.  [ju pʊt mi tu ʃeɪm]</h2>
 <div class="draft-block draft--p left">遇到這句英文，可別被前面那句英文影響了。如果你照字面去直譯成中文，會變成你把我放到(put me to)丟人現眼(shame)之處，你讓我很丟臉，但中文這句話是有兩種完全相反的解讀。其一是「你好丟人現眼，讓我覺得好沒面子也很丟臉」；其二是「你太好了、太優了、太強了，讓我覺得好慚愧，丟臉的是我」。一個是強調「你」丟臉，一個是強調「我」丟臉。中文很奇妙吧，在不同的使用場合下，同一句中文可以有兩種完全相反的意義。</div>
 <blockquote class="draft-block draft--blockquote">你跟我吃飯不要一邊挖鼻孔啦，讓我很丟臉欸！你丟臉別牽扯到我。</blockquote>
