--- a/_posts/2022-05-05-VOCUS-怎麼用英文表達-我是認真的-不是玩假的.html
+++ b/_posts/2022-05-05-VOCUS-怎麼用英文表達-我是認真的-不是玩假的.html
@@ -36,7 +36,7 @@ author: 你的英日語自學導師　 ོꦿ༄譯꧁難忘꧂
 </ul>
 <div class="draft-block draft--p left">就讓美國知名演員羅伯勞(Rob Lowe)來教我們吧。他上艾倫秀節目受訪時，被主持人艾倫問最美好的回憶是什麼時候，他這麼回答：</div>
 <div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/94962216-f0c5-4733-b757-ed0990db513f.gif"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">圖取自艾倫秀。製圖：譯難忘。</figcaption></div>
-<iframe src="https://youtu.be/embed/biz6uWABHww" width="720px" height="360px"></iframe>
+<iframe src="https://youtube.com/embed/embed/biz6uWABHww" width="720px" height="360px"></iframe>
 <blockquote class="draft-block draft--blockquote">Rob Lowe: My favorite memory(回憶) is you and I kissing.</blockquote>
 <blockquote class="draft-block draft--blockquote">羅伯勞：我最喜歡的回憶是我們倆親吻的那一刻。</blockquote>
 <blockquote class="draft-block draft--blockquote">Ellen: Why did I kiss you?</blockquote>
