--- a/_posts/2022-05-11-VOCUS-現在的學生可怕到極點-從-臺中一中音樂老師事件-看現今教學現場.html
+++ b/_posts/2022-05-11-VOCUS-現在的學生可怕到極點-從-臺中一中音樂老師事件-看現今教學現場.html
@@ -11,7 +11,7 @@ author: 高中生看世界
 <div class="draft-block draft--p left">撰文：王中富</div>
 <div class="draft-block draft--p left">＊本篇文章與<a href="https://crossing.cw.com.tw/author/1137" target="_blank" class="draft--a">《換日線》專欄</a>邀稿合作＊</div>
 <div class="draft-block draft--p left">3月11日禮拜五，大部分臺中一中學生還在參與社團活動，而一樁大新聞正悄然醞釀。當天晚上，一部標題為「臺中一中音樂科呂老師情緒失控」的影片在YouTube上瘋傳，一個禮拜後的3月19日已經累積87萬觀看，而這個數字還在攀升。</div>
-<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/f8c824b7-a4ad-41ae-a471-e90e8a6e9495.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"><a href="https://www.youtube.com/watch?v=0Ko_0aBhGmA&t=19s" target="_blank" class="draft--a">圖片來源</a></figcaption></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/f8c824b7-a4ad-41ae-a471-e90e8a6e9495.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"><a href="https://www.youtube.com/embed/0Ko_0aBhGmA&t=19s" target="_blank" class="draft--a">圖片來源</a></figcaption></div>
 <div class="draft-block draft--p left">影片內容大致紀錄了臺中一中一年級學生不滿音樂科呂老師因報告內容超出課程範圍而要求他們刪除部分投影片內容，讓本來40分鐘的報告刪減成了10幾分鐘，最後學生只能唸課文來充數，進而又引發老師不滿，演變成師生的正面衝突。</div>
 <div class="draft-block draft--p left">這個事件被各大媒體刊出，引起各方討論。討論的內容包括老師的情緒控管問題、汰換不適任教師的管道、學生錄影的合法性，甚或是老師長期遭受的霸凌等，社會輿論在各戰場也都沒有一定的風向。3月14日周一下午，臺中一中由直播記者會說明了調查結果，也希望「社會大眾應給老師、學生、學校處理校園危機事件的空間， 暫停以部分、非全貌的資訊檢視或評價此事件，進而對新聞事件涉及的老師、學生或相關人員造成不必要的身心影響」。</div>
 <div class="draft-block draft--p left">記者會召開的當下，筆者和班上的同學都在關注。身為臺中一中內非當事學生，心情是十分複雜的。被眾家媒體麥克風淹沒的是熟識的教務主任，主持記者會的是時不時會在校園裡碰見的校長秘書；當事的學生是其他社團偶有耳聞的學弟，爭議的音樂老師也是不同班同學間的共同話題。一切曬在社會輿論下被討論的，都是我們熟悉的人事物，最不熟悉的反而是外界許多透過片面資訊的臆測與攻擊。</div>
