--- a/_posts/2022-05-13-VOCUS-活在香港睇電視-平台合縱勢已成.html
+++ b/_posts/2022-05-13-VOCUS-活在香港睇電視-平台合縱勢已成.html
@@ -40,10 +40,10 @@ author: 關間聞
 <p>(3) 《TVB免費電視蝕逾5億 廣告收入跌七成》 (明報財經，26/8/2020) https://finance.mingpao.com/fin/instantf/20200826/1598448763833/tvb免費電視蝕逾5億-廣告收入跌七成</p>
 <p>(4) 《電盈旗下ViuTV首賺錢 MIRROR刺激廣告收益 末期息增兩成》 (明報，25/2/2022) https://news.mingpao.com/pns/經濟/article/20220225/s00004/1645727423528/電盈旗下viutv首賺錢-mirror刺激廣告收益-末期息增兩成</p>
 <p>(5) 《HEBEFACE》 https://www.youtube.com/c/HEBEFACE/about</p>
-<p>(6) 《薯茄PartyGame EP22 COLLAR首次玩綜藝！》 (YouTube) https://youtu.be/VTrdxxzHiaE</p>
-<p>(7) 《Stephen．傾 EP 100：COLLAR》 (YouTube) https://youtu.be/MsJTFbnOgSY</p>
-<p>(8) 《龍咁威2 皇母瑤池村報案室在哪裡？由他親自認證 !! | 港產片朝聖地〈龍咁威2之皇母娘娘呢?〉Ft. 谷德昭》 (YouTube) https://youtu.be/GIhY4JkXDes</p>
-<p>(9) 《谷德昭導演也來了!! 我要上〈爆谷一周〉了．與谷導重訪〈行運超人〉的場景 | 港產片朝聖地〈行運超人〉(FEAT. 谷德昭)》 (YouTube) https://youtu.be/lYv3Tp0F-Rc</p>
+<p>(6) 《薯茄PartyGame EP22 COLLAR首次玩綜藝！》 (YouTube) https://youtube.com/embed/VTrdxxzHiaE</p>
+<p>(7) 《Stephen．傾 EP 100：COLLAR》 (YouTube) https://youtube.com/embed/MsJTFbnOgSY</p>
+<p>(8) 《龍咁威2 皇母瑤池村報案室在哪裡？由他親自認證 !! | 港產片朝聖地〈龍咁威2之皇母娘娘呢?〉Ft. 谷德昭》 (YouTube) https://youtube.com/embed/GIhY4JkXDes</p>
+<p>(9) 《谷德昭導演也來了!! 我要上〈爆谷一周〉了．與谷導重訪〈行運超人〉的場景 | 港產片朝聖地〈行運超人〉(FEAT. 谷德昭)》 (YouTube) https://youtube.com/embed/lYv3Tp0F-Rc</p>
 <p>(10) 《食腦 BrainStorming》 https://www.youtube.com/c/BrainStormingOfficial/about</p>
 <p>(11) 《「食腦三子」開業一年未見成績 繼續獲力捧到底係咩原因？》 (香港01，9/4/2022) https://www.hk01.com/sns/article/756973</p>
-<p>(12) 《〈CHILL CLUB推介榜 年度推介21／22〉ERROR ＋MIRROR＋MC $oHo ＆KidNey 話你知組合進化史！6膠突入膠到暈！》 (YouTube) https://youtu.be/hs-bfZhH8aU</p>
+<p>(12) 《〈CHILL CLUB推介榜 年度推介21／22〉ERROR ＋MIRROR＋MC $oHo ＆KidNey 話你知組合進化史！6膠突入膠到暈！》 (YouTube) https://youtube.com/embed/hs-bfZhH8aU</p>
