--- a/_posts/2022-05-16-VOCUS-看完李明哲記者會-一些感想與重要領悟.html
+++ b/_posts/2022-05-16-VOCUS-看完李明哲記者會-一些感想與重要領悟.html
@@ -20,4 +20,4 @@ author: 共創者 葉紹平(平哥)
 <p>我在看這場記者會的過程中心中最大的疑問是台灣在過去幾年有許多因為政治原因被中國政府抓的政治犯；為何目前只有李明哲可以順利回到台灣呢?我想這一切歸功於李淨瑜女士的高調救援策略讓中國政府有所忌憚。</p>
 <p>最後還是提醒一下所有曾經贊助過中國民運的社會運動者，甚至是長期批評中國政府的人，未來去中國、香港、澳門.....等親中國家真的要謹慎小心。</p>
 <p>寫這些要幹嘛，主要是想跟那些妳不是很關心政治，但你身邊有很愛批評中國的人若有天他真的誤踩地雷被中國政府給抓了，記得高調救援才是正道。</p>
-<p><a href="https://www.youtube.com/watch?v=mHKpZVpEqM4">【完整公開】LIVE 遭中國關押5年 李明哲返台記者會</a></p>
+<p><a href="https://www.youtube.com/embed/mHKpZVpEqM4">【完整公開】LIVE 遭中國關押5年 李明哲返台記者會</a></p>
