--- a/_posts/2022-05-17-VOCUS-分享-派對咖孔明.html
+++ b/_posts/2022-05-17-VOCUS-分享-派對咖孔明.html
@@ -13,13 +13,13 @@ author: 蘇 遇
 <h2 class="draft-block draft--h2" name="header-9hsgq">起KI起KI棒棒，起KI起KI棒棒。</h2>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
 <div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"><a href="https://www.youtube.com/watch?v=dNVzBiv8yBs" target="_blank" class="draft--a">孔明舞蹈教學</a></div>
+<div class="draft-block draft--p left"><a href="https://www.youtube.com/embed/dNVzBiv8yBs" target="_blank" class="draft--a">孔明舞蹈教學</a></div>
 <div class="draft-block draft--p left"><span style="text-decoration: underline; ">劇中片頭那魔性的舞蹈配上魔性的歌聲，讓變成動畫的這部作品更加生動且有趣，在這部描述音樂追夢之路上，有孔明的謀略來主導並讓女主角進入演藝圈，更在其中與人饒舌對決，這樣的孔明不讓人喜愛嗎 ?</span></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
 <div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"><a href="https://www.youtube.com/watch?v=Y2RezTJUQGw" target="_blank" class="draft--a">Be Crazy For Me</a></div>
+<div class="draft-block draft--p left"><a href="https://www.youtube.com/embed/Y2RezTJUQGw" target="_blank" class="draft--a">Be Crazy For Me</a></div>
 <div class="draft-block draft--p left">片中插曲，比起片頭曲的洗腦，這首歌從漫畫來到動畫之後，魔性的歌曲席捲了所有讀者的耳朵，更加真實了起來，更加能感受到音樂的彭派。</div>
-<div class="draft-block draft--p left"><a href="https://www.youtube.com/watch?v=mOO3ZcKKidk" target="_blank" class="draft--a">l’m still alive today acoustic ver.</a></div>
+<div class="draft-block draft--p left"><a href="https://www.youtube.com/embed/mOO3ZcKKidk" target="_blank" class="draft--a">l’m still alive today acoustic ver.</a></div>
 <div class="draft-block draft--p left">讓孔明驚豔的便是這首歌曲了，也讓孔明看見了幻覺，便決心要幫助女主角利用自己的謀略讓她的歌被所有人所聽見。</div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
 <div class="draft-block draft--p left"></div>
@@ -33,7 +33,7 @@ author: 蘇 遇
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
 <div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">〈チキチキバンバン〉原曲為匈牙利歌手Jolly在2014年發行的〈Bulikirály〉，為了搭配《派對咖孔明》播出，由QUEENDOM翻唱為日文版本。除了保留原曲中「Chiki Chiki Bam Bam」這句超洗腦歌詞，輕快的舞曲旋律，搭配MV中孔明的魔性舞步，吸引不少網友瘋傳。</div>
-<div class="draft-block draft--p left"><a href="https://www.youtube.com/watch?v=x10XFcR2U1c&t=32s" target="_blank" class="draft--a">Jolly - Bulikirály (Official Music Video)</a></div>
+<div class="draft-block draft--p left"><a href="https://www.youtube.com/embed/x10XFcR2U1c&t=32s" target="_blank" class="draft--a">Jolly - Bulikirály (Official Music Video)</a></div>
 <h2 class="draft-block draft--h2" name="header-76p8u">原曲在這邊喔 !</h2>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
 <div class="draft-block draft--p left"></div>
