--- a/_posts/2022-05-18-VOCUS-flute-與-笛-筩-呼笛-吹笛-等的橋接-兼談-chinese-flute-就是-中國笛-嗎.html
+++ b/_posts/2022-05-18-VOCUS-flute-與-笛-筩-呼笛-吹笛-等的橋接-兼談-chinese-flute-就是-中國笛-嗎.html
@@ -43,7 +43,7 @@ author: 羅聖爾
 <div class="draft-block draft--p left">並且，在更早期的殷商時期，上述的羌人 (Chinese) 又可能是古代中原西方戎人 (Rouran -- 人民、民人，漢譯「柔然」；Russian -- 人士眾之地的人、人民眾之地的人、芮之人，漢譯「俄羅斯人」) 的一個分支，但與後來由 European 之觀點來看的、被認爲也是目前 Russian 的始祖之一的 Norseman (北向之民人、北域來徙之民人，漢文或譯「諾斯人」、「北方人」、「北歐人」等) 及 Norman (北民人、北域來民人，漢文或譯「諾曼人」、「北方人」等) 可能關係不大。</div>
 <div class="draft-block draft--p left">耐人尋味的是，從漢字「筩」又意通漢字「笛」及 flute 來看，或許笛類樂器的發明，最初是從一些被大風吹響的、有破孔的桶子得來的靈感；並且，搞不好早期還可能有像桶子一般巨大的、甚至比當今的 bassoon (低聲筩，漢文或譯「巴松管」、「低音管」等) 大得更多的低音桶型笛，而且是由鼓風裝置或自然風來提供發聲用的氣流呢！<span style="font-weight: bold; ">(有待考古)</span></div>
 <div class="draft-block draft--p center"></div>
-<div class="embed-block-prerender" data-url="https://youtu.be/R2HuxiqUuTA"></div>
-<div class="draft-block draft--p center"><a href="https://youtu.be/R2HuxiqUuTA" target="_blank" class="draft--a"><span style="font-weight: bold; ">https://youtu.be/R2HuxiqUuTA</span></a></div>
+<div class="embed-block-prerender"><iframe allowfullscreen src="https://youtube.com/embed/R2HuxiqUuTA"></div>
+<div class="draft-block draft--p center"><a href="https://youtube.com/embed/R2HuxiqUuTA" target="_blank" class="draft--a"><span style="font-weight: bold; ">https://youtube.com/embed/R2HuxiqUuTA</span></a></div>
 <div class="draft-block draft--p center"><span style="font-weight: bold; ">【附影片：Russ - The Flute Song (Official Video) / 分享自 YouTube】</span></div>
 <div class="draft-block draft--p left"></div>
