--- a/_posts/2022-05-18-VOCUS-津德爾日常紀事-尼日浪子回頭.html
+++ b/_posts/2022-05-18-VOCUS-津德爾日常紀事-尼日浪子回頭.html
@@ -43,4 +43,4 @@ author: 陸坡 (LUPO)
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/a09d3f41-3b5d-424b-9137-0b1eb2b514c5.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft-block draft--p left">裡面還有許多關於當地男性對於歐美文化有趣的認知錯誤，可以看見即便說現在全球化、國際化但對於有些貧困地區的人來說，這些外界並不是啟發他們改變的主因，而是自我覺醒和認知去做才是能夠改變自身，向前踏出一步。</div>
 <div class="draft-block draft--p left">台灣與尼日目前在1996年斷交以後就無來往，只有民間合作如「世界原住民族樂舞節」。目前尼日最大金援除了中國一帶一路之外、也與沙烏地阿拉伯簽訂經濟合作、此外還與美有過共同對抗極端組織ISIS的軍事合作，可以說是各處舉債與求援，但有沒有具體改善人民教育問題卻不得而知。</div>
-<div class="embed-block-prerender" data-url="https://www.youtube.com/watch?v=pGvKR-aZTSs"></div>
+<div class="embed-block-prerender"><iframe allowfullscreen src="https://www.youtube.com/embed/pGvKR-aZTSs"></div>
