--- a/_posts/2022-05-19-VOCUS-東京浪人-日本社會無難民.html
+++ b/_posts/2022-05-19-VOCUS-東京浪人-日本社會無難民.html
@@ -45,4 +45,4 @@ author: 陸坡 (LUPO)
 <div class="draft-block draft--p left">庫德族的在日際遇，讓我聯想到台灣身份認同問題。一是國共內戰時來台的外省人，他們離開所謂的家（中國）跟隨國民政府到台灣，所謂後代外省二、三代的身份認同與台灣一直以來本省外省的對峙問題。</div>
 <div class="draft-block draft--p left">二是台灣新住民許多東南亞籍、中國籍等人在台生活的處境，老實說台灣一些人事對東南亞人的嘴臉是一種，對日韓歐美等又是另一種，藉由這部在日生活庫德族紀錄片值得我們反思，自己台灣對人的雙標。</div>
 <div class="draft-block draft--p left">《東京浪人》是不只國際連日本人都不太知道，有點驚訝和意外的在日庫德族故事，對於已經從小說著日語的庫德族二代、三代，繼續活在難民承認率不到1%的日本社會，從小到大的歧視和無法對視為日本公民的對待，要怎麼改變？在2022年的日本仍然是未知數。</div>
-<div class="embed-block-prerender" data-url="https://www.youtube.com/watch?v=5_-SfR5vU8g"></div>
+<div class="embed-block-prerender"><iframe allowfullscreen src="https://www.youtube.com/embed/5_-SfR5vU8g"></div>
