--- a/_posts/2022-05-19-PQ-美台商會批華府削弱台灣防禦-國防部-不對稱作戰-是型態非武器選項.html
+++ b/_posts/2022-05-19-PQ-美台商會批華府削弱台灣防禦-國防部-不對稱作戰-是型態非武器選項.html
@@ -16,7 +16,7 @@ author: 林志鴻
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/6bac1010-272266052_5012995075430437_9161777943179323324_n-1024x580.jpg" alt="" class="wp-image-101972" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/6bac1010-272266052_5012995075430437_9161777943179323324_n-1024x580.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/6bac1010-272266052_5012995075430437_9161777943179323324_n-300x170.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/6bac1010-272266052_5012995075430437_9161777943179323324_n-768x435.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/6bac1010-272266052_5012995075430437_9161777943179323324_n-1536x869.jpg 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/6bac1010-272266052_5012995075430437_9161777943179323324_n.jpg 2048w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>美台商業協會認為，美國若只批准出售自認對台灣抵抗中國全面入侵不可或缺的武器，將減弱台灣的防禦，使台灣更容易受到中國攻擊／圖：國防部發言人臉書。</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/6bac1010-272266052_5012995075430437_9161777943179323324_n-1024x580.jpg" alt="" class="wp-image-101972" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/6bac1010-272266052_5012995075430437_9161777943179323324_n-1024x580.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/6bac1010-272266052_5012995075430437_9161777943179323324_n-300x170.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/6bac1010-272266052_5012995075430437_9161777943179323324_n-768x435.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/6bac1010-272266052_5012995075430437_9161777943179323324_n-1536x869.jpg 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/6bac1010-272266052_5012995075430437_9161777943179323324_n.jpg 2048w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>美台商業協會認為，美國若只批准出售自認對台灣抵抗中國全面入侵不可或缺的武器，將減弱台灣的防禦，使台灣更容易受到中國攻擊／圖：國防部發言人臉書。</figcaption></figure></div>
 
 
 
@@ -120,7 +120,7 @@ author: 林志鴻
 
 
 
-<h2><strong>▌</strong>軍事專家：應優先購買彈藥類武器再強化載台</h2>
+<h2><strong>▌</strong>軍事專家：「不對稱」作戰思維有其必要性</h2>
 
 
 
@@ -140,11 +140,11 @@ author: 林志鴻
 
 
 
-<p>國家政策研究基金會副研究員揭仲分析，美方對台「不對稱戰力」軍售標準已日漸清晰，一是美方預測台海可能在 2027 年爆發危機，故希望台灣購買可在 2027 年之前快速形成戰力的武器。</p>
+<p>國家政策研究基金會副研究員揭仲分析，美方對台「不對稱戰力」軍售標準已日漸清晰，一是<strong>美方預測台海可能在 2027 年爆發危機</strong>，故希望台灣購買可在 2027 年之前快速形成戰力的武器。</p>
 
 
 
-<p>揭仲指出，另一考慮是共軍近期大幅提升軍艦、戰機的數量與質量，台灣難以在這方面超越中國；在這兩個標準下，<strong>台灣能買的武器恐只剩「彈藥類」，載台類都不能買。</strong></p>
+<p>揭仲指出，另一考慮是共軍近期大幅提升軍艦、戰機的數量與質量，台灣難以在這方面超越中國；在這兩個標準下，台灣能買的武器恐只剩「彈藥類」，載台類都不能買。</p>
 
 
 
@@ -152,15 +152,27 @@ author: 林志鴻
 
 
 
-<p>針對 MH-60R 反潛直升機軍售案生變，紐時引述美國官員稱，美方拒售原因是認為不適合對中國軍隊作戰。國防部長邱國正日前在立院則表示，台灣是因報價太貴才決定不買。<strong>揭仲認為，雙方說法不同，一種可能是美方不想賣，刻意將報價抬高，一種是國防部不想說是美方拒售，另外找個理由。</strong></p>
+<div class="wp-block-image"><figure class="aligncenter size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/1e8c763f-1920x1280_50355790956.jpg" alt="" class="wp-image-101967" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/1e8c763f-1920x1280_50355790956.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/1e8c763f-1920x1280_50355790956-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/1e8c763f-1920x1280_50355790956-768x512.jpg 768w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>美軍發射 FIM-92 刺針防空飛彈／圖：取自維基百科，版權屬公有領域。</figcaption></figure></div>
 
 
 
-<p>此外，紐時報導稱美國官員鼓勵台灣買刺針飛彈，但國防部日前甫宣布刺針飛彈今年有延交風險。揭仲表示，刺針飛彈延交倒非美國所願，主因是刺針飛彈美國已停產多時，現又大量供應給烏克蘭、庫存吃緊，但台灣已付出不少錢，國防部應向美爭取至少先供應一些飛彈。</p>
+<p>台灣安保協會副祕書長何澄輝接受《報呱》訪問指出，台美軍購有既定的程序，<strong>若美方真的如紐約時報所說，未來將終止大部分不屬於「不對稱戰力」範疇的對台軍售，似乎與現實的軍購程序不符</strong>，因此有進一步商榷的必要。</p>
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/1e8c763f-1920x1280_50355790956.jpg" alt="" class="wp-image-101967" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/1e8c763f-1920x1280_50355790956.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/1e8c763f-1920x1280_50355790956-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/1e8c763f-1920x1280_50355790956-768x512.jpg 768w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>若美國國務院拒絕不符合不對稱作戰需求的採購案，甚至要求美國武器製造商不要來替台灣遊說，恐壓縮台灣對美爭取軍售的彈性空間。圖為美軍發射 FIM-92 刺針防空飛彈／圖：取自維基百科，版權屬公有領域。</figcaption></figure></div>
+<p>對於台美商會的批評建言，何澄輝認為，確實，台灣防衛問題面臨多種威脅，必須根據不同的情境，策定相應的應對戰略戰術，中國除全面入侵外，也有可能使用例如：海上封鎖、第五縱隊內部滲透破壞等多種作戰方式。台灣對各項威脅都應有積極的準備。</p>
+
+
+
+<p>對於台美軍售實際狀況是否和報導所言一般產生變化？<strong>何澄輝強調，雖然美國戰略圈確實傳出類似看法，但是否已成共識，恐難以驟然論斷。</strong>國務院目前尚未被證實是否已有此決策，何況尚未聽聞美國國防部或白宮國安當局做出如此決策，若國務院官員有類似表示，相信目前也只是屬於「建議」範疇。</p>
+
+
+
+<p>關於揭仲指台灣能買的武器恐只剩「彈藥類」，何澄輝指出，武器載台的購置成本雖然很高，但是否就無必要新購？況且，載台類和彈藥類恐怕很難清楚二分，舉例而言，無人機的購入就無法適用此二分法，而海馬斯多管火箭既包括了載台也包括了彈藥的採購。</p>
+
+
+
+<p>何澄輝認為，<strong>對台灣來說「不對稱」作戰思維有值得思索並建構相關防衛作為的必要性</strong>，而目前台灣積極求購的各類包括電子作戰、通訊資料鏈路或提升指揮管制效能的系統裝備都屬於提升作戰效能，發揮不對稱十分必要的裝備。也應該是除載台／彈藥之爭外應加注意加強的範疇。</p>
 
 
 
