--- a/_posts/2022-05-20-PQ-日本將測試50人外國觀光團示範專案-盼6月正式開放觀光客入境.html
+++ b/_posts/2022-05-20-PQ-日本將測試50人外國觀光團示範專案-盼6月正式開放觀光客入境.html
@@ -12,7 +12,7 @@ author: 陳怡菱
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/589eacff-國土相-1024x576.jpg" alt="" class="wp-image-102004" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/589eacff-國土相-1024x576.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/589eacff-國土相-300x169.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/589eacff-國土相-768x432.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/589eacff-國土相.jpg 1536w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>日本國土交通大臣齊藤鐵夫，公明黨眾議員<br>（圖／截圖自 YouTube）</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/589eacff-國土相-1024x576.jpg" alt="" class="wp-image-102004" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/589eacff-國土相-1024x576.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/589eacff-國土相-300x169.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/589eacff-國土相-768x432.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/589eacff-國土相.jpg 1536w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>日本國土交通大臣齊藤鐵夫，公明黨眾議員<br>（圖／截圖自 YouTube）</figcaption></figure></div>
 
 
 
