--- a/_posts/2022-05-19-INITIUM-早报-拜登称-完全支持-芬兰-瑞典加入北约-两国满足所有条件.html
+++ b/_posts/2022-05-19-INITIUM-早报-拜登称-完全支持-芬兰-瑞典加入北约-两国满足所有条件.html
@@ -30,7 +30,7 @@ author:
 <p>主权债务违约会损害国家声誉，使其更难在国际市场借到所需资金，或要付出更高借贷成本。对该国货币和经济的信心将受到进一步打击。</p>
 <h3>美国俄克拉荷马州议会通过最严限制堕胎法案</h3>
 <p>美国俄克拉荷马州议会<a href="https://apnews.com/article/abortion-us-supreme-court-politics-texas-legislature-a43f7f21c1b8e07a383b120d1bdbc695">周四通过一项法案</a>，几乎禁止所有堕胎，并允许民众起诉任何帮助女性终止妊娠的人。</p>
-<p>该法案规定，除非出现医疗紧急情况，或因强奸、乱伦导致怀孕，否则从受精那一刻起就禁止堕胎。所有人都可以起诉诊所、医生以及在该州提供堕胎服务的任何人。法案并不禁止使用避孕药或紧急避孕药。</p>
+<p>该法案规定，除非出现医疗紧急情况，或因强奸、乱伦导致怀孕，否则从受精那一刻起就禁止堕胎。法案并不禁止女性使用避孕药或紧急避孕药，但所有人都可以起诉诊所、医生以及在该州提供堕胎服务的任何人。</p>
 <p>待该州共和党州长凯文·斯蒂特（Kevin Stitt）签署后，该法案将立即生效，成为美国最严格限制堕胎的法律。</p>
 <p>斯蒂特此前表示，他会签署任何限制堕胎的法案。本月初他已签署一份禁止怀孕六周以上堕胎的法案。</p>
 <h3>日本东京医学院入学考试歧视女生，被判赔偿</h3>
